[tool.poetry]
name = "portfolio-profit"
version = "0.1.0"
description = "Application for Fintual"
authors = ["Gabriel Anguita <gabriel.anguita.veas@gmail.com>"]
readme = "README.md"
packages = [{include = "portfolio_profit"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
